--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
 
     // Your web app's Firebase configuration
     const firebaseConfig = {
-      apiKey: "AIzaSyCEGqXL1dtcotOYudzgZklkwZbDzFjCw0U",
-      authDomain: "fichazona.firebaseapp.com",
-      projectId: "fichazona",
-      storageBucket: "fichazona.appspot.com",
-      messagingSenderId: "849742326472",
-      appId: "1:849742326472:web:0ae3b3056b2b301b1693fd"
+      apiKey: "AIzaSyAnPe-Ti-gABTwsKiGi1LYK2-HffhP6cyY",
+      authDomain: "ordem-da-miscelanea.firebaseapp.com",
+      projectId: "ordem-da-miscelanea",
+      storageBucket: "ordem-da-miscelanea.appspot.com",
+      messagingSenderId: "910684348288",
+      appId: "1:910684348288:web:69f41418a2d044a765eb65"
     };
 
     // Initialize Firebase
